--- a/OnlineTutor2/Views/Account/EditProfile.cshtml
+++ b/OnlineTutor2/Views/Account/EditProfile.cshtml
@@ -24,6 +24,7 @@
                     }
 
                     <form asp-action="EditProfile" method="post">
+                        <input type="hidden" asp-for="CurrentEmail" />
                         <div class="row">
 
                             <div class="col-md-12">
@@ -125,4 +126,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 }
