--- a/OnlineTutor2/Views/Account/Profile.cshtml
+++ b/OnlineTutor2/Views/Account/Profile.cshtml
@@ -240,3 +240,7 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+}
