--- a/OnlineTutor2/Views/Class/Details.cshtml
+++ b/OnlineTutor2/Views/Class/Details.cshtml
@@ -110,7 +110,7 @@
                                         </td>
                                         <td>@student.User.Email</td>
                                         <td>@(student.School ?? "Не указана")</td>
-                                        <td>@student.EnrollmentDate.ToString("dd.MM.yyyy")</td>
+                                        <td>@student.CreatedAt.ToString("dd.MM.yyyy")</td>
                                     </tr>
                                 }
                             </tbody>
