--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -6,8 +6,6 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/OnlineTutor2.styles.css" asp-append-version="true" />
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     @await RenderSectionAsync("Styles", required: false)
 </head>
@@ -72,6 +70,7 @@
                                                 <i class="fas fa-file-alt"></i> Отчеты
                                             </a>
                                         </li>
+                                        <li><hr class="dropdown-divider"></li>
                                         <li>
                                             <a asp-controller="Calendar" asp-action="Index" class="dropdown-item">
                                                 <i class="fas fa-calendar-alt"></i> Календарь
@@ -168,8 +167,7 @@
 
                 <div class="col-md-4 footer-column">
                     <h6><i class="fas fa-graduation-cap text-primary"></i> Тьюторная</h6>
-                    <p>&copy; 2025 - Система онлайн-обучения</p>
-                    <p>Эффективная подготовка к ЕГЭ по русскому языку</p>
+                    <p>&copy; 2025 - Образовательная платформа</p>
                     <p>
                         <a asp-area="" asp-controller="Home" asp-action="Privacy">
                             <i class="fas fa-shield-alt"></i> Конфиденциальность
