--- a/OnlineTutor2/Views/StudentManagement/Details.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Details.cshtml
@@ -327,7 +327,7 @@
                     <dd class="col-6">@Model.User.CreatedAt.ToString("dd.MM.yyyy")</dd>
 
                     <dt class="col-6">Добавлен:</dt>
-                    <dd class="col-6">@Model.EnrollmentDate.ToString("dd.MM.yyyy")</dd>
+                    <dd class="col-6">@Model.CreatedAt.ToString("dd.MM.yyyy")</dd>
 
                     <dt class="col-6">Последний вход:</dt>
                     <dd class="col-6">
