--- a/OnlineTutor2/Views/StudentManagement/Delete.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Delete.cshtml
@@ -77,7 +77,7 @@
                                     </div>
                                 </div>
                                 <small class="text-muted">
-                                    <i class="fas fa-clock"></i> Добавлен: @Model.EnrollmentDate.ToString("dd.MM.yyyy")
+                                    <i class="fas fa-clock"></i> Добавлен: @Model.CreatedAt.ToString("dd.MM.yyyy")
                                 </small>
                             </div>
                         </div>
