--- a/OnlineTutor2/Views/Home/Index.cshtml
+++ b/OnlineTutor2/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
         <h1 class="display-4">
             <i class="fas fa-graduation-cap"></i> Тьюторная
         </h1>
-        <p class="lead">Система онлайн-обучения для подготовки к ЕГЭ</p>
+        <p class="lead">Образовательная платформа</p>
         <hr class="my-4 bg-white">
         <p>Присоединяйтесь к нашей платформе для эффективного обучения</p>
         <div class="mt-4">
