add forgotPassword, emailConfirmation

--- a/OnlineTutor2/Views/Account/Login.cshtml
+++ b/OnlineTutor2/Views/Account/Login.cshtml
@@ -41,6 +41,12 @@
                             <i class="fas fa-sign-in-alt"></i> Войти
                         </button>
                     </div>
+
+                    <div class="text-center mt-3">
+                        <a asp-action="ForgotPassword" class="text-decoration-none">
+                            <i class="fas fa-question-circle"></i> Забыли пароль?
+                        </a>
+                    </div>
                 </form>
             </div>
             <div class="card-footer text-center">
